--- a/src/.env.example
+++ b/src/.env.example
@@ -22,6 +22,12 @@ PAPERCUT_LOG_WEB_REQUESTS=N
 PAPERCUT_CSRF_CHECK_VALIDATE_REQUEST_ORIGIN=N
 PAPERCUT_CSRF_CHECK_DENY_UNKNOWN_ORIGIN=N
 PAPERCUT_SSL_CERTIFICATE_CHECKS=Y
+PAPERCUT_SECURITY_PRINT_AND_DEVICE_SCRIPT_ENABLE=N
+PAPERCUT_SECURITY_PRINT_SCRIPT_ALLOW_UNSAFE_CODE=N
+PAPERCUT_SECURITY_DEVICE_SCRIPT_ALLOW_UNSAFE_CODE=N
+PAPERCUT_SECURITY_CARD_NO_CONVERTER_SCRIPT_PATH_ALLOW_LIST=
+PAPERCUT_SECURITY_CARD_NO_CONVERTER_SCRIPT_ALLOW_UNSAFE_CODE=N
+PAPERCUT_SECURITY_CUSTOM_EXECUTABLE_ALLOWED_DIRECTORY_LIST=
 
 PGUSER=$DB_USER
 POSTGRES_USER=$DB_USER
