--- a/src/docker-compose-example.yml
+++ b/src/docker-compose-example.yml
@@ -49,6 +49,12 @@ services:
       - PAPERCUT_CSRF_CHECK_DENY_UNKNOWN_ORIGIN
       - PAPERCUT_HOSTNAME
       - PAPERCUT_SSL_CERTIFICATE_CHECKS
+      - PAPERCUT_SECURITY_PRINT_AND_DEVICE_SCRIPT_ENABLE
+      - PAPERCUT_SECURITY_PRINT_SCRIPT_ALLOW_UNSAFE_CODE
+      - PAPERCUT_SECURITY_DEVICE_SCRIPT_ALLOW_UNSAFE_CODE
+      - PAPERCUT_SECURITY_CARD_NO_CONVERTER_SCRIPT_PATH_ALLOW_LIST
+      - PAPERCUT_SECURITY_CARD_NO_CONVERTER_SCRIPT_ALLOW_UNSAFE_CODE
+      - PAPERCUT_SECURITY_CUSTOM_EXECUTABLE_ALLOWED_DIRECTORY_LIST
       - SMB_NETBIOS_NAME
       - SMB_WORKGROUP
     depends_on:
